--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^2.2.8",
     "core-js": "^3.8.3",
+    "nprogress": "^0.2.0",
     "screenfull": "^6.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
